# rknn-cpp-Multithreading

./: CMakeLists.txt
include/: ThreadPool.hpp  bindCpu.h  lock_queue.h  postprocess.h  preprocess.h  rkYolov5s.hpp  rknnPool.hpp
src/: bindCpu.cpp  lock_queue.cpp  main.cc  postprocess.cc  preprocess.cc  rkYolov5s.cc
toolchains/: aarch64-linux-gnu.toolchain.cmake
